--- a/index.html
+++ b/index.html
@@ -552,13 +552,13 @@
         <div class="card" id="card3">
             <img src="images/SemT%C3%ADtulo-4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <a id="paybutton" href="/loja">
+                <a id="paybutton" href="/loja/index.html">
                     <button class="card__resgatar" data-next-card="card5" id="enviar"><i class="fa"
                                                                                          style="font-size:20px; "></i>
                         RESGATAR
                     </button>
                 </a></div>
-            <a id="paybutton" href="/loja">
+            <a id="paybutton" href="/loja/index.html">
             </a>
             <div class="resposta__gradeContainer"></div>
         </div>
